tests/errors/macro/macro_grid_in_line/two_def_in_one_string.c
#define name1 1 #define name2 2 

int main()
{
	printf("%i\n%i\n", name1, name2);	// знак "#" здесь не предполагается
	return 0;
}
